# fdm

./: .gitignore  CMakeLists.txt  README.md
cartesian/: mesh.hh
doc/doxygen/: conf.in  user.conf.in
doc/sphinx/: conf.py.in  index.rst
doc/sphinx/fdm/: api.rst
examples/gmg/: CMakeLists.txt  control.hh  init.cc  options.hh  types.hh
examples/gmg/configs/: default.yaml
examples/gmg/src/: analyze.cc  analyze.hh  control.hh  final.cc  final.hh  gmg.cc  init.cc  init.hh  mg.cc  mg.hh  norm.cc  norm.hh  options.hh  solve.cc  solve.hh  state.hh  types.hh  util.hh
examples/gmg/src/tasks/: analyze.cc  analyze.hh  comps.cc  comps.hh  init.cc  init.hh  io.cc  io.hh  norm.cc  norm.hh
examples/gs/: CMakeLists.txt
examples/gs/src/: analyze.cc  analyze.hh  annotation.hh  control.hh  final.cc  final.hh  gs.cc  init.cc  init.hh  initialize.cc  options.hh  poisson.cc  problem.cc  problem.hh  solve.cc  solve.hh  state.hh  types.hh
examples/gs/src/tasks/: init.cc  init.hh  io.cc  io.hh  norm.cc  norm.hh  smooth.cc  smooth.hh
examples/poisson/: CMakeLists.txt
examples/poisson/include/: analyze.hh  control.hh  initialize.hh  problem.hh  state.hh
examples/poisson/include/tasks/: init.hh  io.hh  norm.hh  smooth.hh
examples/poisson/src/: annotation.hh  finalize.hh  initialize.cc  options.hh  poisson.cc  problem.cc  problem.hh  solve.cc  solve.hh  types.hh
examples/poisson/src/tasks/: init.cc  init.hh  io.hh  norm.cc  smooth.cc
fdm/: CMakeLists.txt  mesh.hh
fdm/test/: mesh.cc
spack-repo/: repo.yaml
spec/: mesh.hh
