#------------------------------------------------------------------------------#
# Add an executable.
#------------------------------------------------------------------------------#

add_executable(gmg
  gmg.cc
  init.cc
)

#------------------------------------------------------------------------------#
# Add the FleCSI libraries and dependencies.
#------------------------------------------------------------------------------#

target_link_libraries(gmg FleCSI::FleCSI
  FleCSI-SP-FDM::FleCSI-SP-FDM
)
